--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
+    "aws-sdk": "^2.1603.0",
+    "axios": "^1.6.8",
+    "next": "14.1.0",
     "react": "^18",
+    "react-click-away-listener": "^2.2.3",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-icons": "^5.1.0",
+    "react-lottie": "^1.2.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "framer-motion": "^11.1.7",
+    "postcss": "^8",
+    "react-intersection-observer": "^9.8.2",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
