--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@elasticemail/elasticemail-client": "^4.0.23",
     "@heroicons/react": "^2.1.3",
     "aws-sdk": "^2.1603.0",
     "axios": "^1.6.8",
+    "formik": "^2.4.5",
     "next": "14.1.0",
     "react": "^18",
     "react-click-away-listener": "^2.2.3",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
-    "react-lottie": "^1.2.4"
+    "react-lottie": "^1.2.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@react-three/drei": "^9.105.4",
@@ -26,6 +30,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-lottie": "^1.2.10",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
@@ -33,6 +38,7 @@
     "postcss": "^8",
     "react-intersection-observer": "^9.8.2",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "yup": "^1.4.0"
   }
 }
