--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.1603.0",
     "axios": "^1.6.8",
     "formik": "^2.4.5",
+    "isomorphic-dompurify": "^2.17.0",
     "next": "14.1.0",
     "react": "^18",
     "react-click-away-listener": "^2.2.3",
