--- a/github/main.yaml
+++ b/github/main.yaml
@@ -1,7 +1,7 @@
 name: Vercel Prod Deployment
 env:
-  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID_PROD }}
-  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID_PROD }}
+  VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+  VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 on:
   push:
     branches:
